<resources>
    <string name="app_name">BookAGuide</string>
    <string name="routes_tab">Routes</string>
    <string name="guides_tab">Guides</string>
    <string name="transport">Transport</string>
    <string name="routes_text">Here there will be a list of routes</string>
    <string name="guides_text">A list of guides will be here</string>
    <string name="drivers_text">A list of drivers will be here</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="selectDate">Select a date</string>
    <string name="customButtonText">Set a custom route here</string>
    <string name="addMarkerQuestion">Are you sure you want to add this place to your custom route?</string>
    <string name="markerLimit">You can place up to 8 places to be visited in your tour. Click ok and then finish to complete your selection as is.
    Click cancel to clear your current selection and start over again.</string>
    <string name="finish">Finish</string>
    <string name="info">Info</string>
    <string name="provideInfoMap">Here you can place markers on the map to specify the places you want to visit with our guides.
    You can place up to 8 markers. The first marker will be the starting/meeting point with our guides/drivers. Click cancel to reset your selections and start over</string>
    <string name="guideSelection">You have successfully selected your guide. Please select a car and your route if not already done and send your reservation</string>
    <string name="transportSelection">You have successfully selected your transport. Please select a guide and your route if not already done and send your reservation</string>
    <string name="routeSelection">You have successfully selected a route from the predefined list. Please select a car and your guide if not already done and send your reservation</string>
    <string name="selectAllFields">You need to select a date, a route, a guide and transport first to perform a reservation</string>
    <string name="reservationCompleted">You have successfully completed your reservation. Click ok to continue navigating in the app.</string>
    <string name="myRequestInfo">Here you can see the places to be visited in your trip. As you are getting closer to a location a popup will provide more info</string>
    <string name="cannotSelectPastDates">You cannot select past dates. Please select a date in future for your reservation</string>
<!--    <string name="welcome">Welcome to BookAGuide!</string>-->
<!--    <string name="description">This is a reservation service for custom guided tours in Athens region. Select your route, guide and transport and you are set to go!</string>-->

</resources>