<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/acropolis_login"
    tools:context="com.antonis.bookaguide.RegisterActivity"
    android:gravity="top">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/teal_700">

        <AutoCompleteTextView
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:completionHintView="@color/white"
            android:hint="@string/prompt_username"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/teal_700">

        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/teal_700">

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/prompt_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/teal_700">

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_password_again"
            android:imeActionId="@integer/register_form_finished"
            android:imeActionLabel="@string/action_sign_up"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:onClick="signUp"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700" />



</LinearLayout>